--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> style="background-color:rgb(200, 80, 99);">Welcome to My Page</h1>
+<h1 style="color:Tomato;">Hello Everyone</h1>
 <p>This was made by Thomas Gill</p>
 </body>
 </html>
