--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1 style="color:Tomato;">Hello Everyone</h1>
-<p style="background-color:DogerBlue;">This was made by Thomas Gill</p>
+<p style="background-color:DodgerBlue;">This was made by Thomas Gill</p>
 </body>
 </html>
